kubernetes/environments/dev/headlamp/ingress.yaml
---
# IngressRoute fuer Headlamp (DEV)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s-dashboard-dev-v2.eneg.de`)
      kind: Rule
      services:
        - name: headlamp
          namespace: headlamp
          port: 80
  tls:
    secretName: headlamp-tls
